--- a/index.html
+++ b/index.html
@@ -1,54 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>Socket.IO chat</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font: 13px Helvetica, Arial;
-        }
-
-        form {
-            background: #000;
-            padding: 3px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-            form input {
-                border: 0;
-                padding: 10px;
-                width: 90%;
-                margin-right: .5%;
-            }
-
-            form button {
-                width: 9%;
-                background: rgb(130, 224, 255);
-                border: none;
-                padding: 10px;
-            }
-
-        #messages {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-            #messages li {
-                padding: 5px 10px;
-            }
-
-                #messages li:nth-child(odd) {
-                    background: #eee;
-                }
-    </style>
+  
 </head>
 <body>
     <h1>Node.js & Socket.io Chat Room!</h1>
@@ -59,15 +12,23 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
- var socket = io();
- $('form').submit(function(){
- socket.emit('chat message', $('#m').val());
- $('#m').val('');
- return false;
- });
- socket.on('chat message', function(msg){
- $('#messages').append($('<li>').text(msg));
- });
+        $(document).ready(function () {
+            var http = require('http');
+            var port = process.env.port || 4043;
+            http.createServer(function (req, res) {
+
+                res.write('<p>Hello from ' + process.env.mediavaletapp + ' </p>');
+                res.write('<ul>');
+                res.write('<li><label>Azure App Setting Name </label>' + process.env.mediavaletapp + ' </li>');
+
+                res.write('</ul>');
+
+                res.write('<p>Happy Clouding!</p>');
+
+                res.end('<p>' + process.env.mediavaletapp + '</p>');
+
+            }).listen(port);
+        });
     </script>
 </body>
 </html>
